--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ nav {
   margin-bottom: 1em;
   border-bottom-width: 1px;
   border-bottom-style: solid;
-  border-bottom-color: oklch(80% 3% 200);
+  border-bottom-color: oklch(50% 10% 200 / 40%);
 }
 
 nav a {
@@ -34,14 +34,14 @@ nav a {
 
 nav a:hover {
   border-bottom: 0.4em solid var(--color-accent);
-  background-color: oklch(from var(--color-accent) 95% 5% h);
+  background-color: color-mix(in oklch, var(--color-accent), canvas 85%);
   padding-bottom: calc(0.5em - 0.4em);
 }
 
 nav a.current {
   border-bottom-width: 0.4em;
   border-bottom-style: solid;
-  border-bottom-color: oklch(80% 3% 200);
+  border-bottom-color: oklch(0.419 0.071 200.191 / 0.4);
   padding-bottom: calc(0.5em - 0.4em)
 }
 
@@ -105,6 +105,17 @@ section {
 section:hover {
   border-color: var(--color-accent);
   background-color: oklch(from var(--color-accent) 95% 5% h);
+}
+
+.color-scheme {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  font-family: inherit;
+  font-size: 0.9rem;
+  display: flex;
+  align-items: center;
+  gap: 0.25rem;
 }
 
 
